# PPTLayout

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
data/: dataset.json
data/processed/pptlayout/: test.pt  train.pt  val.pt
notebooks/: convert_ppt_to_pptx.ipynb  layout_bench.ipynb  llm_results.csv  pptlayout.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
pptlayout/ppt_operator/: ppt_reader.py
presentation/: pptlayout.key
src/pptlayout/: examplar_selector.py  llm.py  parser.py  preprocessor.py  prompts.py  ranker.py  serializer.py  utils.py
src/pptlayout/extractors/: factories.py  factorys.py  ppt_extractor.py  run_extractors.py  shape_extractors.py  slide_extractor.py
src/pptlayout/input/: element_operations.py  examplar_selector.py  html_conversion.py  html_converter.py  operators.py  ppt_shape_extractor.py  ppt_to_html_converter.py  preprocessor.py  serializer.py  shape_wrappers.py  utils.py
src/pptlayout/llm/: call_ollama.py  llm.py  parser.py  prompts.py
src/pptlayout/old/: examplar_selector.py  parser.py  preprocessor.py  prompts.py  utils.py  visualizer.py
src/pptlayout/ppt_content_extractor/: shape_handlers.py
src/pptlayout/ppt_extractors/: shape_extractors.py
src/pptlayout/ppt_handler/: shape_extractors.py  shape_handlers.py
src/pptlayout/ppt_operation/: ppt_to_html_converter.py  shape_wrappers.py  utils.py
src/pptlayout/ppt_operator/: shape_wrappers.py
src/pptlayout/visualizers/: layout_visualizer.py
tests/: test_extract_json.py  test_factories.py  test_ppt_extractors.py  test_ppt_shape_extractor.py  test_shape_extractor.py  test_shape_wrapper.py  test_utils.py
tests/data/: dataset.json  dataset.pt  dataset.txt
tests/output/: test.csv
