[tool.poetry]
name = "pptlayout"
version = "0.1.0"
description = "Leverage llm to ameliorate the visual attractiveness of a presentation."
authors = ["Tianyu Hu <tianyuhu@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.11"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[project]
requires-python = "~=3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
