[tool.poetry]
name = "pptlayout"
version = "0.1.1"
description = "Leverage llm to ameliorate the visual attractiveness of a presentation."
authors = ["Tianyu Hu <tianyuhu@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pre-commit = "^4.0.1"
pipenv = "^2024.2.0"
flake8 = "^7.1.1"
python-pptx = "^1.0.2"
flake8-pyproject = "^1.2.3"
backoff = "^2.2.1"
openai = "^1.52.2"
tiktoken = "^0.8.0"
requests = "^2.32.3"
tqdm = "^4.66.5"
mosestokenizer = "^1.2.1"
sacremoses = "^0.1.1"
torchvision = "^0.20.0"
tabulate = "^0.9.0"
clip = "^0.2.0"
opencv-python = "^4.10.0.84"
torch = "^2.5.0"
black = {extras = ["jupyter"], version = "^24.10.0"}
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
sympy = "1.13.1"
jupyter = "^1.1.1"
ollama = "^0.3.3"
seaborn = "^0.13.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.flake8]
ignore = "E203, E266, E501, W503"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.mypy]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["./tests"]

# coverage report configuration
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.setuptools]
py-modules = ['pptlayout']
